<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/exception_handling_layout"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:background="@color/white"
            tools:context=".MainActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_circle"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/man"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/text3"
                android:fontFamily="@font/poppinsregular"
                android:textSize="12sp"
                android:textColor="#797979"
                app:layout_constraintStart_toEndOf="@+id/img_circle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/text4"
                android:textColor="#46474B"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_circle"
                app:layout_constraintTop_toBottomOf="@+id/textview3" />

            <ImageView
                android:id="@+id/ic_notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/ic_menu"
                app:layout_constraintRight_toLeftOf="@+id/ic_menu"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

            <ImageView
                android:id="@+id/ic_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_menu_24" />

            <TextView
                android:id="@+id/textview5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/text5"
                android:textColor="#46474B"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_circle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_view"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview5">

                <ImageView
                    android:id="@+id/img_ramen"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:src="@drawable/img_ramen"
                    android:layout_marginStart="-1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_ramen"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textview6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/text6"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/textview7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppinsbold"
                        android:text="@string/text7"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_card"
                        android:fontFamily="@font/poppinssemibold"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:text="@string/text8"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="8sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textview9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/text9"
                android:textColor="#46474B"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/cl_view"
                app:layout_constraintTop_toBottomOf="@+id/cl_view" />

            <TextView
                android:id="@+id/textview10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/text10"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cl_view"
                app:layout_constraintTop_toBottomOf="@id/cl_view" />

            <TextView
                android:id="@+id/textview11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text11"
                android:fontFamily="@font/poppinsregular"
                android:textSize="12sp"
                android:textColor="#C5C4CB"
                app:layout_constraintTop_toBottomOf="@+id/textview9"
                app:layout_constraintLeft_toLeftOf="@+id/textview9" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_view"
                tools:listitem="@layout/layout_food" />
            <TextView
                android:id="@+id/textview12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/text12"
                android:textColor="#46474B"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/rv_food"
                app:layout_constraintTop_toBottomOf="@+id/rv_food" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/text10"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/rv_food"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_food" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@drawable/nav_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        app:menu="@menu/nav_icon" />
</LinearLayout>