<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/exception_handling_layout"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/white"
            tools:context=".DetailFood">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/textview13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text13"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="20sp"
                android:textColor="#46474B"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <ImageView
                android:id="@+id/ic_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_more_horiz_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_full_food"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginTop="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pizza"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview13"
                app:shapeAppearanceOverlay="@style/imgFullFood" />

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/img_full_food"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/textview14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text14"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="24sp"
                    android:textColor="#46474B"/>
                <TextView
                    android:id="@+id/textview15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text15"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="16sp"
                    android:textColor="#A6A6A6"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="14dp"
                android:paddingVertical="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/linear1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_full_food">


                <ImageView
                    android:id="@+id/ic_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove_24" />

                <TextView
                    android:id="@+id/textincrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ic_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear1"
                app:layout_constraintLeft_toLeftOf="parent">

                <ImageView
                    android:id="@+id/ic_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_star_24"/>

                <TextView
                    android:id="@+id/textview16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text16"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="16sp"
                    android:textColor="#A6A6A6"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/linear1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/linear3">

                <ImageView
                    android:id="@+id/ic_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_chat_24"/>

                <TextView
                    android:id="@+id/textview17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text17"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="16sp"
                    android:textColor="#A6A6A6"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/linear3"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/textview18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text18"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="16sp"
                    android:textColor="#46474B"/>
                <TextView
                    android:id="@+id/textview19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/text19"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="16sp"
                    android:textColor="#A6A6A6"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/linear5"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/textview20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:text="@string/text20"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="16sp"
                    android:textColor="#A6A6A6"/>
                <TextView
                    android:id="@+id/textview21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text21"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="16sp"
                    android:textColor="#A6A6A6"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@drawable/nav_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        app:menu="@menu/nav_icon" />
</LinearLayout>